--- a/loginpage.html
+++ b/loginpage.html
@@ -24,6 +24,7 @@
                             <a class="nav-link" href="loginpage.html" id="authBtn">Login</a>
                         </li>
                     </ul>
+                    <button id="toggleThemeBtn" class="btn btn-dark ms-auto">Switch to Dark Mode</button>
                 </div>
             </div>
         </nav>
@@ -59,5 +60,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
     <script src="loginpage.js"></script>
+    <script src = "theme.js"></script>
 </body>
 </html>
