--- a/secondpage.html
+++ b/secondpage.html
@@ -24,6 +24,7 @@
                             <a class="nav-link" href="loginpage.html" id="authBtn">Login</a>
                         </li>
                     </ul>
+                    <button id="toggleThemeBtn" class="btn btn-dark ms-auto">Switch to Dark Mode</button>
                 </div>
             </div>
         </nav>
@@ -55,17 +56,25 @@
                 </div>
             </form>
         </section>
-        
+        <div class="container my-4">
+            <input type="text" id="nameFilterInput" placeholder="Filter by name" class="form-control mb-3">
+            <input type="text" id="searchInput" placeholder="Search comments or feedback" class="form-control mb-3">
+            <select id="ratingFilter" class="form-select mb-3">
+                <option value="">Filter by rating</option>
+                <option value="excellent">Excellent</option>
+                <option value="good">Good</option>
+                <option value="fair">Fair</option>
+                <option value="poor">Poor</option>
+            </select>
+            <button id="applyFiltersBtn" class="btn btn-primary">Apply Filters</button>
+        </div>
         <div class="d-flex justify-content-center my-3">
-            <button id="showHistoryBtn" class="btn btn-secondary">Check history of Survey</button>
+            <button id="showHistoryBtn" class="btn btn-secondary me-2">Check History of Survey</button>
+            <button id="closeHistoryBtn" class="btn btn-danger">Close History</button>
         </div>
         
-        <div id="surveyHistoryList" class="my-4"></div>
+        <div id="surveyHistoryList" class="my-4" style="display: none;"></div>
 
-        <!-- Кнопка переключения темы -->
-        <div class="d-flex justify-content-center my-3">
-            <button id="toggleThemeBtn" class="btn btn-dark">Switch to Dark Mode</button>
-        </div>
     </main>
 
     <footer class="bg-dark text-white text-center py-3 mt-5">
