--- a/secondpage.html
+++ b/secondpage.html
@@ -33,7 +33,7 @@
     <main class="container mt-4">
         <section id="survey">
             <h2 class="text-center mb-4">Survey Questions</h2>
-            <form class="row g-3" action="#" method="POST">
+            <form class="row g-3" id="surveyForm">
                 <div class="col-12">
                     <label for="q1" class="form-label">Your Name:</label>
                     <input type="text" id="q1" name="q1" class="form-control">
