--- a/index.html
+++ b/index.html
@@ -16,15 +16,14 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                    <ul class="navbar-nav">
+                    <ul class="navbar-nav me-auto">
                         <li class="nav-item">
                             <a class="nav-link" href="secondpage.html">Survey</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="loginpage.html" id="authBtn">Login</a>
-                        </li>
                     </ul>
-                    <button id="toggleThemeBtn" class="btn btn-dark ms-auto">Switch to Dark Mode</button>
+                    <span id="userDisplayName" class="text-white me-3"></span>
+                    <a href="loginpage.html" id="authBtn" class="btn btn-outline-light me-2">Login</a>
+                    <button id="toggleThemeBtn" class="btn btn-dark">Switch to Dark Mode</button>
                 </div>
             </div>
         </nav>
